# py-qa-assistant

./: .gitignore  PHASE1_ARCHITECTURE_PLAN.md  README.md  start.ps1  stop.ps1
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: ai.py  assets.py  auth.py  chat.py  chat_records.py  conversations.py  courses.py  dashboard.py  deps.py  documents.py  follow_ups.py  health.py  logs.py  profiles.py  retrieval.py  router.py  settings.py  students.py
backend/app/core/: config.py  database.py  errors.py  exceptions.py  response.py
backend/app/crud/: ai_analysis.py  asset.py  chat_record.py  dashboard.py  follow_up.py  profile.py  student.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  ai_analysis.py  asset.py  chat_record.py  conversation.py  course.py  document.py  enums.py  follow_up.py  profile.py  qa_log.py  stage_log.py  student.py  user.py
backend/app/schemas/: __init__.py  ai_analysis.py  asset.py  chat.py  chat_record.py  common.py  conversation.py  dashboard.py  follow_up.py  profile.py  stage_log.py  student.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  chunker_service.py  conversation_service.py  course_service.py  deepseek_service.py  document_service.py  embedding_service.py  faiss_service.py  intent_service.py  lesson_resolver.py  mock_ai.py  prompt_service.py  qa_log_service.py  rag_service.py  (+3 more)
backend/scripts/: init_db.py  reset_db.py
backend/test-data/: python基础答疑知识库.md  python操作答疑知识库.md
backend/tests/: test_health.py
(+51 files in other folders)
