[project]
name = "python-qa-customer-service"
version = "0.1.0"
description = "Python 学习答疑客服系统 - 后端 (FastAPI + RAG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "openai>=1.54",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "python-multipart>=0.0.32",
    "faiss-cpu>=1.14.2",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "dashscope>=1.25.21",
]

# 预留：RAG / 外部模型相关依赖。本轮只做骨架，按需 `uv sync --extra rag` 安装。
[project.optional-dependencies]
rag = [
    "faiss-cpu>=1.9",       # FAISS 向量检索（预留）
    "openai>=1.54",         # DeepSeek 走 OpenAI 兼容接口（预留）
    "dashscope>=1.20",      # DashScope embedding / rerank（预留）
    "rank-bm25>=0.2",       # BM25 检索（预留）
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",          # FastAPI TestClient 依赖
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
